# droid-gguf

./: gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/cpp/cmake/: FindOpenCL.cmake
app/src/main/cpp/opencl-stub/: opencl_stub.c
app/src/main/java/ngo/xnet/droid_gguf/: LlamaEngine.kt  MainActivity.kt
app/src/main/java/ngo/xnet/droid_gguf/ui/: ChatMessage.kt  ChatScreen.kt  ChatViewModel.kt  ModelPickerScreen.kt
app/src/main/java/ngo/xnet/droid_gguf/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
